# quantum_teachable_machine

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: test_qkernel.ipynb
qtm/circuits/: ansatz.py  feature_maps.py  kernel.py
qtm/models/: qkernel.py
qtm/trainer/: ccka.py  optimizers.py
tests/: test_angle_embedding_kernel.py  test_qkernel.py
