[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qtm"
version = "0.1.0"
description = "Quantum Teachable Machine"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["qtm*"]
exclude = ["logs*", "data*", "checkpoints*"]
